landscape-flare/src/tui/snapshots/lflare__tui__snapshots__dash-auth-rejected-en.snap
---
source: landscape-flare/src/tui/snapshots.rs
expression: terminal.backend()
---
"                                    lflare · Landscape L2 Session                                   "
"┌Connection────────────────────────────────────────────────────────────────────────────────────────┐"
"│Status: Authentication rejected: psk rejected by server                                           │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Mappings (waiting for handshake)──────────────────────────────────────────────────────────────────┐"
"│Manage mappings after handshake succeeds                                                          │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Log───────────────────────────────────────────────────────────────────────────────────────────────┐"
"│listening for server advertisements on the wire                                                   │"
"│⚠ server discovered, exchanging handshake keys                                                    │"
"│✗ psk rejected: 3 attempts remaining before lockout                                               │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"Up focus mappings · PgUp PgDn scroll logs · a add mapping · l switch language · q disconnect and qui"
