landscape-flare/src/tui/snapshots/lflare__tui__snapshots__dash-exit-confirm-en.snap
---
source: landscape-flare/src/tui/snapshots.rs
expression: terminal.backend()
---
"                                    lflare · Landscape L2 Session                                   "
"┌Connection────────────────────────────────────────────────────────────────────────────────────────┐"
"│Status: Connected · session 42 · aa:bb:cc:dd:ee:ff                                                │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Mappings (a add · d delete)───────────────────────────────────────────────────────────────────────┐"
"│▸ ✓ 127.0.0.1:8022 -> router 127.0.0.1:22                                                         │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Log───────────────────────────────────────────────────────────────────────────────────────────────┐"
"│listening for server advertisements on the wire                                                   │"
"│server discovered, exchanging handshake keys                                                      │"
"│                                                                                                  │"
"│                       ┌Disconnect────────────────────────────────────────┐                       │"
"│                       │                                                  │                       │"
"│                       │         Disconnect and quit the session?         │                       │"
"│                       │   Enter confirm · Esc cancel · Ctrl-C quit now   │                       │"
"│                       └──────────────────────────────────────────────────┘                       │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"Up Down select mappings · PgUp PgDn scroll · a add d delete · q disconnect and quit · L  Language: E"
