landscape-flare/src/tui/snapshots/lflare__tui__snapshots__dash-link-lost-en.snap
---
source: landscape-flare/src/tui/snapshots.rs
expression: terminal.backend()
---
"                                    lflare · Landscape L2 Session                                   "
"┌Connection────────────────────────────────────────────────────────────────────────────────────────┐"
"│Status: Link lost, reconnecting                                                                   │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Mappings (waiting for handshake)──────────────────────────────────────────────────────────────────┐"
"│  ✓ 127.0.0.1:8022 -> router 127.0.0.1:22                                                         │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Log───────────────────────────────────────────────────────────────────────────────────────────────┐"
"│listening for server advertisements on the wire                                                   │"
"│server discovered, exchanging handshake keys                                                      │"
"│⚠ no advertisement seen for 10s, searching again                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"Up focus mappings · PgUp PgDn scroll logs · a add mapping · F3 switch language · q disconnect and qu"
