landscape-flare/src/tui/snapshots/lflare__tui__snapshots__dash-log-wrap-60x24-en.snap
---
source: landscape-flare/src/tui/snapshots.rs
expression: terminal.backend()
---
"                lflare · Landscape L2 Session               "
"┌Connection────────────────────────────────────────────────┐"
"│Status: Connected · session 42 · aa:bb:cc:dd:ee:ff        │"
"└──────────────────────────────────────────────────────────┘"
"┌Mappings (a add · d delete)───────────────────────────────┐"
"│No port mappings                                          │"
"└──────────────────────────────────────────────────────────┘"
"┌Log───────────────────────────────────────────────────────┐"
"│listening for server advertisements on the wire           │"
"│server discovered, exchanging handshake keys              │"
"│tunnel established · ethertype 0x88b6 · retransmit window │"
"│  64 · keepalive 5s · device auto                         │"
"│⚠ advertisement interval jitter above threshold           │"
"│✗ duplicate frame detected, dropping retransmit           │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
"Up focus mappings · PgUp PgDn scroll logs · a add mapping · "
