landscape-flare/src/tui/snapshots/lflare__tui__snapshots__dash-logs-scrolled-en.snap
---
source: landscape-flare/src/tui/snapshots.rs
expression: terminal.backend()
---
"                                    lflare · Landscape L2 Session                                   "
"┌Connection────────────────────────────────────────────────────────────────────────────────────────┐"
"│Status: Connected · session 42 · aa:bb:cc:dd:ee:ff                                                │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Mappings (a add · d delete)───────────────────────────────────────────────────────────────────────┐"
"│No port mappings                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Log───────────────────────────────────────────────────────────────────────────────────────────────┐"
"│tunnel keepalive exchange 1 ok                                                                    │"
"│tunnel keepalive exchange 2 ok                                                                    │"
"│tunnel keepalive exchange 3 ok                                                                    │"
"│tunnel keepalive exchange 4 ok                                                                    │"
"│tunnel keepalive exchange 5 ok                                                                    │"
"│tunnel keepalive exchange 6 ok                                                                    │"
"│tunnel keepalive exchange 7 ok                                                                    │"
"│tunnel keepalive exchange 8 ok                                                                    │"
"│tunnel keepalive exchange 9 ok                                                                    │"
"│tunnel keepalive exchange 10 ok                                                                   │"
"│tunnel keepalive exchange 11 ok                                                                   │"
"│tunnel keepalive exchange 12 ok                                                                   │"
"│tunnel keepalive exchange 13 ok                                                                   │"
"│tunnel keepalive exchange 14 ok                                                                   │"
"│tunnel keepalive exchange 15 ok                                                                   │"
"│tunnel keepalive exchange 16 ok                                                                   │"
"│tunnel keepalive exchange 17 ok                                                                   │"
"│tunnel keepalive exchange 18 ok                                                                   │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"Up focus mappings · PgUp PgDn scroll logs · a add mapping · l switch language · q disconnect and qui"
