landscape-flare/src/tui/snapshots/lflare__tui__snapshots__dash-mapping-error-en.snap
---
source: landscape-flare/src/tui/snapshots.rs
expression: terminal.backend()
---
"                                    lflare · Landscape L2 Session                                   "
"┌Connection────────────────────────────────────────────────────────────────────────────────────────┐"
"│Status: Connected · session 42 · aa:bb:cc:dd:ee:ff                                                │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Mappings (a add · d delete)───────────────────────────────────────────────────────────────────────┐"
"│No port mappings                                                                                  │"
"│The server does not allow destination port 8080 for this session                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Log───────────────────────────────────────────────────────────────────────────────────────────────┐"
"│listening for server advertisements on the wire                                                   │"
"│server discovered, exchanging handshake keys                                                      │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"Up focus mappings · PgUp PgDn scroll logs · a add mapping · l switch language · q disconnect and qui"
